src/main/java/com/example/sidepot/member/error/BaseErrorCode.java
package com.example.sidepot.member.error;

public interface BaseErrorCode {
    int httpValue();
    String getErrorMessage();
}
